<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Lesser General Public License, as published by the Free
 * Software Foundation and available at
 * http://www.fsf.org/licensing/licenses/lgpl.html, version 2.1 or above.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
 * details.
 *
 * Copyright (c) 2001-2021 StrongAuth, Inc. (d/b/a StrongKey)
 *
 * **********************************************
 *
 *  888b    888          888
 *  8888b   888          888
 *  88888b  888          888
 *  888Y88b 888  .d88b.  888888  .d88b.  .d8888b
 *  888 Y88b888 d88""88b 888    d8P  Y8b 88K
 *  888  Y88888 888  888 888    88888888 "Y8888b.
 *  888   Y8888 Y88..88P Y88b.  Y8b.          X88
 *  888    Y888  "Y88P"   "Y888  "Y8888   88888P'
 *
 * **********************************************
 *
 * Drawer navigation menu options
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_enroll_user"
            android:icon="@drawable/ic_account_box_cyan_24dp"
            android:title="@string/menu_enroll_user" />
        <item
            android:id="@+id/nav_register_fido_key"
            android:icon="@drawable/ic_loginwithfido_circle_green"
            android:title="@string/menu_fido_registration" />

        <item
            android:id="@+id/nav_fido_authentication"
            android:icon="@drawable/ic_loginwithfido_circle_green"
            android:title="@string/menu_fido_authentication" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_cloud_circle_cyan_24dp"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_retrieve_user"
            android:icon="@drawable/ic_account_box_cyan_24dp"
            android:title="@string/menu_retrieve_user" />

    </group>
</menu>
