<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Lesser General Public License, as published by the Free
 * Software Foundation and available at
 * http://www.fsf.org/licensing/licenses/lgpl.html, version 2.1.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
 * details.
 *
 * Copyright (c) 2001-2021 StrongAuth, Inc. (d/b/a StrongKey)
 *
 * **********************************************
 *
 *  888b    888          888
 *  8888b   888          888
 *  88888b  888          888
 *  888Y88b 888  .d88b.  888888  .d88b.  .d8888b
 *  888 Y88b888 d88""88b 888    d8P  Y8b 88K
 *  888  Y88888 888  888 888    88888888 "Y8888b.
 *  888   Y8888 Y88..88P Y88b.  Y8b.          X88
 *  888    Y888  "Y88P"   "Y888  "Y8888   88888P'
 *
 * **********************************************
 *
 * Drawer navigation flow. Consists of (for now):
 *
 * - Home
 * - Enroll User
 * - Display User Data
 * - Display ReadOnly Content
 * - Fido Registration
 * - Fido Authentication
 * - Fido Authorization
 */
-->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.strongkey.sfaeco.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/enroll_user_action"
            app:destination="@id/nav_enroll_user" />
        <action
            android:id="@+id/authenticate_fido_action"
            app:destination="@id/nav_fido_authentication" />
    </fragment>

    <fragment
        android:id="@+id/nav_retrieve_user"
        android:name="com.strongkey.sfaeco.ui.RetrieveUserFragment"
        android:label="@string/menu_retrieve_user"
        tools:layout="@layout/fragment_retrieve_user">
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/go_enroll_user_action"
            app:destination="@id/nav_enroll_user" />
        <action
            android:id="@+id/action_nav_enroll_user_to_nav_register_fido_key"
            app:destination="@id/nav_register_fido_key" />
    </fragment>

    <fragment
        android:id="@+id/nav_enroll_user"
        android:name="com.strongkey.sfaeco.ui.EnrollUserFragment"
        android:label="@string/menu_enroll_user"
        tools:layout="@layout/fragment_enroll_user">
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_enroll_user_to_nav_register_fido_key"
            app:destination="@id/nav_register_fido_key" />
    </fragment>

    <fragment
        android:id="@+id/nav_register_fido_key"
        android:name="com.strongkey.sfaeco.ui.RegisteredUserFragment"
        android:label="@string/menu_fido_registration"
        tools:layout="@layout/fragment_registered_user" >
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_fido_registration_to_nav_fido_authentication"
            app:destination="@id/nav_registered_fido_key" />
    </fragment>

    <fragment
        android:id="@+id/nav_registered_fido_key"
        android:name="com.strongkey.sfaeco.ui.RegisteredFidoKeyFragment"
        android:label="@string/menu_fido_registered_key"
        tools:layout="@layout/fragment_registered_fido_key" >
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_fido_registered_key_to_nav_enroll_user"
            app:destination="@id/nav_enroll_user" />
        <action
            android:id="@+id/action_nav_fido_registered_key_to_nav_fido_authentication"
            app:destination="@id/nav_fido_authentication" />
    </fragment>

    <fragment
        android:id="@+id/nav_fido_authentication"
        android:name="com.strongkey.sfaeco.ui.FidoAuthenticationFragment"
        android:label="@string/menu_fido_authentication"
        tools:layout="@layout/fragment_authenticated_fido_key" >
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_fido_authentication_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.strongkey.sfaeco.ui.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_payment"
            app:destination="@id/nav_payment" />
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.strongkey.sfaeco.ui.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" >
        <action
            android:id="@+id/go_home_action"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_payment_to_nav_checkout"
            app:destination="@id/nav_checkout" />
        <argument
            android:name="plaintext"
            app:argType="string" />
        <argument
            android:name="signature"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkout"
        android:name="com.strongkey.sfaeco.ui.CheckoutFragment"
        android:label="@string/menu_checkout"
        tools:layout="@layout/fragment_checkout" >
    <action
        android:id="@+id/go_home_action"
        app:destination="@id/nav_home" />
    <action
        android:id="@+id/action_nav_checkout_to_nav_completion"
        app:destination="@id/nav_checkout" />
    </fragment>


    <fragment
        android:id="@+id/nav_completion"
        android:name="com.strongkey.sfaeco.ui.CompletedUserTransactionFragment"
        tools:layout="@layout/fragment_completed_transaction">
    <action
        android:id="@+id/go_home_action"
        app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_display_readonly_content"
        android:name="com.strongkey.sfaeco.ui.DisplayReadOnlyContentFragment"
        android:label="@string/label_details"
        tools:layout="@layout/fragment_display_readonly_content" />

</navigation>