<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * This program is free software; you can redistribute it and/or modify it under
 * the terms of the GNU Lesser General Public License, as published by the Free
 * Software Foundation and available at
 * http://www.fsf.org/licensing/licenses/lgpl.html, version 2.1.
 *
 * This program is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
 * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
 * details.
 *
 * Copyright (c) 2001-2021 StrongAuth, Inc. (d/b/a StrongKey)
 *
 * **********************************************
 *
 *  888b    888          888
 *  8888b   888          888
 *  88888b  888          888
 *  888Y88b 888  .d88b.  888888  .d88b.  .d8888b
 *  888 Y88b888 d88""88b 888    d8P  Y8b 88K
 *  888  Y88888 888  888 888    88888888 "Y8888b.
 *  888   Y8888 Y88..88P Y88b.  Y8b.          X88
 *  888    Y888  "Y88P"   "Y888  "Y8888   88888P'
 *
 * **********************************************
 *
 * Enroll user fragment layout
 */
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/strongkeyLightGray"
    tools:context=".ui.EnrollUserFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/uid_text_input"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight=".5"-->
<!--                    android:enabled="false"-->
<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->

<!--                    <com.google.android.material.textfield.TextInputEditText-->
<!--                        android:id="@+id/uid_edit_text"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textColor="@color/colorPrimaryDark"-->
<!--                        android:hint="@string/label_uid"/>-->
<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_user_name"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/given_name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    app:helperText="@string/helper_text_given_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/given_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_given_name"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/family_name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    app:helperText="@string/helper_text_family_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/family_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_family_name"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/personal_mobile_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:helperText="@string/helper_text_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/personal_mobile_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_mobile_number"/>
            </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_weight=".25"
                android:text="@string/label_reset"
                android:textColor="@color/colorPrimary"
                app:strokeWidth="1dp"
                app:strokeColor="@color/strongkeyLightGray"
                app:backgroundTint="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight=".25"
                android:text="@string/label_submit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>